# dfhack-40d

./: .gitmodules  CMakeLists.txt
plugins/: CMakeLists.txt  changelayer.cpp  cleanowned.cpp  createitem.cpp  feature.cpp  getplants.cpp  manipulator.cpp  plants.cpp  prospector.cpp  showmood.cpp  sort.cpp  stocks_fast.cpp  strangemood.cpp  tweak.cpp
plugins/ruby/: CMakeLists.txt
scripts/fix/: item-occupancy.lua
